--- a/02-webpack/06-pwa/package.json
+++ b/02-webpack/06-pwa/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"http-server dist"
+    "start": "http-server dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "html-webpack-plugin": "^5.5.0",
+    "http-server": "^14.1.1",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "workbox-webpack-plugin": "^6.5.4"
   }
 }
